Network Service: Add DCHECK() for |callback_| in SiteDataClearer destructor

This CL adds a DCHECK() in the SiteDataClearer destructor to make sure the
|callback_| is already null when the destructor is called.

Bug: 909826
Change-Id: I0cb3b039e23e16d3c827e9c877ea413619542158
Reviewed-on: https://chromium-review.googlesource.com/c/1359295
Commit-Queue: Jun Cai <juncai@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614484}
Former-commit-id: 5dfaf338a6b7f5c283e093059fc9e8dbfcc7c1d1